--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-stripe-checkout": "^2.6.3",
     "reactstrap": "^8.4.1",
     "sweetalert2": "^9.10.11"
   },
